// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ExperimentsAndArchive > renders archive page 1`] = `
<DocumentFragment>
  <div
    class="kfp-workflow-page"
  >
    <div
      class="kfp-inspection-tabs"
      data-activation-direction="none"
      data-orientation="horizontal"
    >
      <div
        aria-label="Experiments"
        class="kfp-inspection-tab-list"
        data-activation-direction="none"
        data-orientation="horizontal"
        role="tablist"
      >
        <button
          aria-disabled="false"
          aria-selected="false"
          class="kfp-inspection-tab"
          data-activation-direction="none"
          data-orientation="horizontal"
          id="base-ui-_r_6_"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Active
        </button>
        <button
          aria-controls="base-ui-_r_8_"
          aria-disabled="false"
          aria-selected="true"
          class="kfp-inspection-tab"
          data-activation-direction="none"
          data-active=""
          data-composite-item-active=""
          data-orientation="horizontal"
          id="base-ui-_r_7_"
          role="tab"
          tabindex="0"
          type="button"
        >
          Archived
        </button>
      </div>
      <div
        aria-labelledby="base-ui-_r_7_"
        class="kfp-inspection-tab-panel"
        data-activation-direction="none"
        data-index="0"
        data-orientation="horizontal"
        id="base-ui-_r_8_"
        role="tabpanel"
        tabindex="0"
      >
        <div
          class="kfp-workflow-page"
        >
          <div>
            <div
              class="kfp-runs-table-view"
            >
              <div
                class="kfp-runs-filter-row"
              >
                <label
                  for="_r_9_"
                >
                  Filter experiments
                </label>
                <input
                  class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
                  data-slot="input"
                  id="_r_9_"
                  placeholder="Filter experiments"
                  type="search"
                  value=""
                />
              </div>
              <div
                class="kfp-runs-table-card"
              >
                <div
                  aria-label="Archived experiments table"
                  class="kfp-runs-table-scroll"
                  role="region"
                  tabindex="0"
                >
                  <table
                    aria-busy="true"
                    aria-label="Archived experiments"
                    class="kfp-runs-table"
                    style="min-width: 640px;"
                  >
                    <thead>
                      <tr>
                        <th
                          aria-label="Row details"
                          class="kfp-resource-expansion"
                          scope="col"
                        />
                        <th
                          scope="col"
                        >
                          <button
                            type="button"
                          >
                            Experiment name
                            <svg
                              aria-hidden="true"
                              class="lucide lucide-arrow-up-down"
                              fill="none"
                              height="13"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                              viewBox="0 0 24 24"
                              width="13"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="m21 16-4 4-4-4"
                              />
                              <path
                                d="M17 20V4"
                              />
                              <path
                                d="m3 8 4-4 4 4"
                              />
                              <path
                                d="M7 4v16"
                              />
                            </svg>
                          </button>
                        </th>
                        <th
                          scope="col"
                        >
                          Description
                        </th>
                      </tr>
                    </thead>
                    <tbody>
                      <tr>
                        <td
                          class="kfp-runs-empty"
                          colspan="3"
                        >
                          <span
                            role="status"
                          >
                            Loading experiments…
                          </span>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
                <div
                  class="kfp-runs-table-footer"
                >
                  <span
                    aria-live="polite"
                    role="status"
                  />
                  <div
                    class="kfp-runs-pagination"
                  >
                    <label
                      for="_r_a_"
                    >
                      Rows per page
                    </label>
                    <select
                      disabled=""
                      id="_r_a_"
                    >
                      <option
                        value="10"
                      >
                        10
                      </option>
                      <option
                        value="20"
                      >
                        20
                      </option>
                      <option
                        value="50"
                      >
                        50
                      </option>
                      <option
                        value="100"
                      >
                        100
                      </option>
                    </select>
                    <button
                      aria-label="Previous page"
                      class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-transparent text-foreground-2 hover:bg-muted hover:text-foreground size-[34px] p-0"
                      data-disabled=""
                      data-slot="button"
                      data-testid="prev-page-btn"
                      disabled=""
                      tabindex="0"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-chevron-left"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m15 18-6-6 6-6"
                        />
                      </svg>
                    </button>
                    <button
                      aria-label="Next page"
                      class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-transparent text-foreground-2 hover:bg-muted hover:text-foreground size-[34px] p-0"
                      data-disabled=""
                      data-slot="button"
                      data-testid="next-page-btn"
                      disabled=""
                      tabindex="0"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-chevron-right"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m9 18 6-6-6-6"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ExperimentsAndArchive > renders experiments page 1`] = `
<DocumentFragment>
  <div
    class="kfp-workflow-page"
  >
    <div
      class="kfp-inspection-tabs"
      data-activation-direction="none"
      data-orientation="horizontal"
    >
      <div
        aria-label="Experiments"
        class="kfp-inspection-tab-list"
        data-activation-direction="none"
        data-orientation="horizontal"
        role="tablist"
      >
        <button
          aria-controls="base-ui-_r_2_"
          aria-disabled="false"
          aria-selected="true"
          class="kfp-inspection-tab"
          data-activation-direction="none"
          data-active=""
          data-composite-item-active=""
          data-orientation="horizontal"
          id="base-ui-_r_0_"
          role="tab"
          tabindex="0"
          type="button"
        >
          Active
        </button>
        <button
          aria-disabled="false"
          aria-selected="false"
          class="kfp-inspection-tab"
          data-activation-direction="none"
          data-orientation="horizontal"
          id="base-ui-_r_1_"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Archived
        </button>
      </div>
      <div
        aria-labelledby="base-ui-_r_0_"
        class="kfp-inspection-tab-panel"
        data-activation-direction="none"
        data-index="0"
        data-orientation="horizontal"
        id="base-ui-_r_2_"
        role="tabpanel"
        tabindex="0"
      >
        <div
          class="kfp-workflow-page"
        >
          <div
            class="kfp-runs-table-view"
          >
            <div
              class="kfp-runs-filter-row"
            >
              <label
                for="_r_3_"
              >
                Filter experiments
              </label>
              <input
                class="h-[34px] w-full min-w-0 rounded-control border border-muted-foreground bg-background px-3 font-kfp-sans text-[13px] text-foreground placeholder:text-muted-foreground focus:border-primary disabled:cursor-not-allowed disabled:opacity-50 aria-invalid:border-destructive"
                data-slot="input"
                id="_r_3_"
                placeholder="Filter experiments"
                type="search"
                value=""
              />
            </div>
            <div
              class="kfp-runs-table-card"
            >
              <div
                aria-label="Experiments table"
                class="kfp-runs-table-scroll"
                role="region"
                tabindex="0"
              >
                <table
                  aria-busy="true"
                  aria-label="Experiments"
                  class="kfp-runs-table"
                  style="min-width: 640px;"
                >
                  <thead>
                    <tr>
                      <th
                        aria-label="Row details"
                        class="kfp-resource-expansion"
                        scope="col"
                      />
                      <th
                        scope="col"
                      >
                        <button
                          type="button"
                        >
                          Experiment name
                          <svg
                            aria-hidden="true"
                            class="lucide lucide-arrow-up-down"
                            fill="none"
                            height="13"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="13"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="m21 16-4 4-4-4"
                            />
                            <path
                              d="M17 20V4"
                            />
                            <path
                              d="m3 8 4-4 4 4"
                            />
                            <path
                              d="M7 4v16"
                            />
                          </svg>
                        </button>
                      </th>
                      <th
                        scope="col"
                      >
                        Description
                      </th>
                      <th
                        scope="col"
                      >
                        <button
                          type="button"
                        >
                          Recent runs · up to 5
                          <svg
                            aria-hidden="true"
                            class="lucide lucide-arrow-up-down"
                            fill="none"
                            height="13"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="13"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="m21 16-4 4-4-4"
                            />
                            <path
                              d="M17 20V4"
                            />
                            <path
                              d="m3 8 4-4 4 4"
                            />
                            <path
                              d="M7 4v16"
                            />
                          </svg>
                        </button>
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr>
                      <td
                        class="kfp-runs-empty"
                        colspan="4"
                      >
                        <span
                          role="status"
                        >
                          Loading experiments…
                        </span>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
              <div
                class="kfp-runs-table-footer"
              >
                <span
                  aria-live="polite"
                  role="status"
                />
                <div
                  class="kfp-runs-pagination"
                >
                  <label
                    for="_r_4_"
                  >
                    Rows per page
                  </label>
                  <select
                    disabled=""
                    id="_r_4_"
                  >
                    <option
                      value="10"
                    >
                      10
                    </option>
                    <option
                      value="20"
                    >
                      20
                    </option>
                    <option
                      value="50"
                    >
                      50
                    </option>
                    <option
                      value="100"
                    >
                      100
                    </option>
                  </select>
                  <button
                    aria-label="Previous page"
                    class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-transparent text-foreground-2 hover:bg-muted hover:text-foreground size-[34px] p-0"
                    data-disabled=""
                    data-slot="button"
                    data-testid="prev-page-btn"
                    disabled=""
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-chevron-left"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m15 18-6-6 6-6"
                      />
                    </svg>
                  </button>
                  <button
                    aria-label="Next page"
                    class="inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap rounded-control border font-kfp-sans text-[13px] font-medium transition-colors disabled:cursor-not-allowed disabled:opacity-50 aria-busy:cursor-wait [&_svg]:size-[18px] [&_svg]:shrink-0 border-transparent bg-transparent text-foreground-2 hover:bg-muted hover:text-foreground size-[34px] p-0"
                    data-disabled=""
                    data-slot="button"
                    data-testid="next-page-btn"
                    disabled=""
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-chevron-right"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m9 18 6-6-6-6"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
